
19-01-2020, Coruja
Fixed: Function TIMERF not setting the timer correctly.
Changed: Worldsave now will save all multis on 'spheremultis.scp' file instead of only customizable houses.

25-01-2020, Coruja
Changed: Misc optimizations on internal variables engine.
	-This should give a big performance boost to load files at server startup
	-Ported from SphereX branch, credits to Nolok

29-01-2020, Coruja
Fixed: Console not throwing some specific exception errors when the exception occur.

20-02-2020, Coruja
Fixed: Function UNEXTRACT making server crash.
Changed: Equipped items now will update timer using TIMERD (10x per sec) instead TIMER (1x per sec).
[sphereCrypt.ini]: Added crypt key for classic client 7.0.84 and enhanced client 4.0.84

24-02-2020, Coruja
Added: Support for function MAPWAYPOINT on classic clients >= 7.0.84.0.
	-NOTE: Enhanced clients support all waypoint types, but classic clients only support type 0 (remove) and 6 (healer)

06-03-2020, Coruja
Fixed: Items being teleported to P=[0~100],[0~100] when dropped into containers that will exceed max weight limit.
Changed: Large containers now can be placed inside small containers.
[sphere.ini]: Added new BackpackMaxWeight setting to set default max weight limit for chars main backpack

07-03-2020, Coruja
Changed: Chars now can exceed MAXWEIGHT limit, but not backpack max weight limit (which is a bit higher)
	-Walking while overweight will drop stamina faster (as it was on old Sphere versions)
	-Stamina penalty can be customized using StaminaLossAtWeight and RunningPenalty settings on sphere.ini
	-Backpack max weight can be customized using BackpackMaxWeight setting on sphere.ini and MODMAXWEIGHT item property
[sphere_msgs.scp]: Updated message list with the following changes
	-Added: cont_full_items, msg_fatigue_weight
	-Removed: cont_full, cont_magic, cont_toosmall, msg_heavy, msg_overload
	-Updated: cont_full_weight

17-03-2020, Coruja
Fixed: HEARALL function not working correctly.