@@ -4,7 +4,7 @@
 // You may not use this file except in compliance with the License.
 // You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
 //****************************************************************************
-// FILE LAST UPDATED: Thursday, Feb 20, 2020
+// FILE LAST UPDATED: Tuesday, Mar 17, 2020
 
 // WARNING: Modifing this file, without knowing what you are doing, can make Sphere behave incorrectly.
 
@@ -22,6 +22,7 @@ ENC_TFISH  3 // Twofish
 
 [SPHERECRYPT]
 //Classic Clients
+7008500 03D33D2AD 0AAC95E7F ENC_TFISH // 7.0.85
 7008400 03DC480BD 0AAAD127F ENC_TFISH // 7.0.84
 7008300 03D8E72CD 0AA81DE7F ENC_TFISH // 7.0.83
 7008200 03E5728DD 0AB14227F ENC_TFISH // 7.0.82
@@ -166,6 +167,7 @@ ENC_TFISH  3 // Twofish
 2000000 02D13A5FD 0A39D527F ENC_BFISH // 2.0.0
 
 //Enhanced Clients
+067900850 01F33D2AD 0BBC95E7F ENC_TFISH // 4.0.85
 067900840 01FC480BD 0BBAD127F ENC_TFISH // 4.0.84
 067900830 01F8E72CD 0BB81DE7F ENC_TFISH // 4.0.83
 067900820 01C5728DD 0BA14227F ENC_TFISH // 4.0.82
